--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,18 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     height: 100%;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 20px;
 }
 
 header {
     width: 100%;
-    height: 350px;
-    text-align: center;
+    height: 370px;
 }
 
 .hero-image {
@@ -41,7 +40,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: darkslategrey;
+    background-color: rgb(55, 64, 64);
 }
   
 li {
@@ -62,35 +61,69 @@ li a:hover {
 
 h2 {
     color: seagreen;
+    text-align: center;
 }
 
 #about-me {
-    padding-bottom: 30px;
-    width: 100;
-    display: inline-block;
-    flex-direction: column;
+    padding-top: 20px;
+    width: 100%;
+}
+
+p {
+    line-height: 120%;
+    padding: 40px 0px 0px 30px;
+    vertical-align: middle;
 }
 
 #my-info {
-    display: inline-flex;
+    display: flex;
+    padding: 10px 140px 30px 140px;
+    vertical-align: middle;
 }
 
 #my-work{
-    padding-top: 30px;
+    padding: 30px 100px 0px 100px;
     width: 100%;
     text-align: center;
     background-color: lightgrey;
 }
 
 #work-images {
+    padding: 0px 50px 50px 30px;
+    margin: auto;
+}
+
+#smaller-images {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    padding-bottom: 30px;
+    padding-top: 20px;
 }
 
 footer {
     text-align: center;
-    background-color: darkslategray;
+    background-color: rgb(55, 64, 64);
+    padding: 20px 0px 20px 0px;
+}
+
+form {
+    width: 100%;
+    color: white;
+}
+
+input {
+    width: 200px;
+    padding: 8px 15px;
+    margin: 8px 0;
+    border-radius: 6px;
+}
+
+@media (max-width: 700px) {
+    #smaller-images, 
+    #workimages, 
+    #my-info {
+        flex 100%;
+    }
 }
