--- a/styles.css
+++ b/styles.css
@@ -123,9 +123,9 @@ input {
     border-radius: 6px;
 }
 
-@media (max-width: 700px) {
+@media screen and (max-width: 600px) {
     img,
     #my-info {
-        flex 100%;
+        flex: 100%;
     }
 }
